readability fix for light/colorful waybar

--- a/.config/waybar/colorful/light/style.css
+++ b/.config/waybar/colorful/light/style.css
@@ -114,7 +114,7 @@ tooltip label {
     font-size: 20px;
     font-weight: bold;
     opacity: 0.8;
-    color: @foreground;
+    color: @background;
 }
 
 #custom-system {
@@ -327,7 +327,7 @@ tooltip label {
 /* NOTIFS */
 
 #custom-sidebar {
-    color: @foreground;
+    color: @background;
     font-size: 20px;
     margin: 3px 0px;
     padding: 3px 8px;
